--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,22 @@
+:root{
+  --blue1 : #EFF6FF;
+  --blue2 : #DBEAFE;
+  --blue3 : #BFDBFE;
+  --blue4 : #93C5FD;
+  --blue5 : #60A5FA;
+  --blue6 : #3B82F6;
+  --blue7 : #2563EB;
+  --blue8 : #1D4ED8;
+  --blue9 : #1E40AF;
+  --blue10 : #1E3A8A;
+}
+.montserrat{
+  font-family: 'Montserrat', sans-serif;
+}
+.poppins{
+  font-family: 'Poppins', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -17,6 +36,17 @@ code {
   display: flex;
   flex-direction: column;
   background-image: url("./assets/img/fondo.png");
+  background-position: left;
+  background-size: cover;
+}
+
+.fondo-carousel{
+  /* background-color: #0093E9;
+  background-color: #1e3a8a;
+  background-image: linear-gradient(160deg, #1e3a8a 0%, #80D0C7 100%); */
+  background-color: rgb(2, 2, 2);
+  
+
 }
 
 .hero {
@@ -66,48 +96,70 @@ code {
   max-width: 800px;
 }
 
+.btn_call_a{
+  background-color: var(--blue6);
+  color: var(--blue1)
+}
+
+
+
+
+.titulo_negro{
+  padding: 1rem 0;
+  color: rgb(175, 173, 225);
+  text-align: center;
+}
+
 .carousel_custom {
   width: 100vw;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  /* padding: 0 11rem; */
 }
 
 .carousel_custom_item {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  width: 90vw;
+  justify-content: center;
+  width: 100vw;
 }
+.carousel-control-prev, .carousel-control-next{
+  width: 5% !important;
+}
+
 .tarjeta {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 40vw;
-  margin: 0.5rem 0;
+  margin: 10px 10px;
+  border-radius: 25px;
+  
 }
 .tarjeta:hover {
-  box-shadow: 2px 0px 43px -7px rgba(0, 0, 0, 0.95);
-  -webkit-box-shadow: 2px 0px 43px -7px rgba(0, 0, 0, 0.95);
-  -moz-box-shadow: 2px 0px 43px -7px rgba(0, 0, 0, 0.95);
+  filter: drop-shadow(0px 0px 30px #6581ce);
+  -webkit-filter: drop-shadow(0px 0px 30px #6581ce);
+  -moz-filter: drop-shadow(0px 0px 30px #6581ce);
 }
+
 .tarjeta_imagen {
   width: 100%;
-}
+  border-radius: 25px 25px 0 0;
+  -webkit-border-radius: 25px 25px 0px 0px;
+  -moz-border-radius: 25px 25px 0px 0px;
+  }
 .tarjeta_ciudad {
   font-size: 1.3rem;
-
+  color: var(--blue10);
   width: 100%;
   text-align: center;
-  color: rgb(242, 228, 228);
-  background-color: rgb(26, 25, 25);
+  background-color: var(--blue4);
+  font-weight:400
 }
 .tarjeta_pais {
   width: 100%;
   text-align: center;
-  color: rgb(242, 228, 228);
-  background-color: rgb(26, 25, 25);
+  color: var(--blue10);
+  background-color: var(--blue4);
+  border-radius: 0 0 25px 25px;
 }
 
 @media (max-width: 660px) {
@@ -126,12 +178,18 @@ code {
  .footer_main{
   display: flex;
   align-items: center;
-  background-color:#5e6577 ;
+  height: 15vh;
+  background-color: #0093E9;
+  background-image: linear-gradient(-90deg, #0093E9 0%, #80D0C7 100%);
+  
 }
 
 .footer_links{
   width: 20vw;
   display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  margin: 5px;
   
 }
 .footer_titulo{
@@ -141,8 +199,6 @@ code {
 }
 .footer_links a{
   background-color: #fff;
-  padding: .1rem;
-  margin: 0 .5rem;
   border-radius: 5px;
   text-decoration: none;
   text-align: center;
@@ -159,3 +215,17 @@ code {
 }
 
 
+@media (max-width: 1100px){
+  .fondo-main{
+    background-size: initial;
+  }
+}
+
+body::-webkit-scrollbar {
+  width: 7px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--blue5);
+  border-radius: 5px;
+}
