--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,7 @@
 :root {
-  --blue1: #eff6ff;
-  --blue2: #dbeafe;
-  --blue3: #bfdbfe;
-  --blue4: #93c5fd;
-  --blue5: #60a5fa;
-  --blue6: #3b82f6;
-  --blue7: #2563eb;
-  --blue8: #1d4ed8;
-  --blue9: #1e40af;
-  --blue10: #1e3a8a;
+  --naranja: #ffaf34;
+  --negro: #414141;
+  --gris: #9d9d9d;
 }
 .montserrat {
   font-family: "Montserrat", sans-serif;
@@ -16,12 +9,24 @@
 .poppins {
   font-family: "Poppins", sans-serif;
 }
-.vh-80{
+.vh-80 {
   height: 80vh;
+}
+.bg-oscuro {
+  background-color: var(--negro);
+}
+.bg-naranja {
+  background-color: var(--naranja);
+}
+.texto-naranja {
+  color: var(--naranja);
+}
+.texto-oscuro {
+  color: var(--negro);
 }
 
 body {
-  margin: 0;
+  margin: 5vh 0 0 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -44,7 +49,6 @@ code {
 }
 
 .fondo-carousel {
-  background-color: rgb(2, 2, 2);
   padding-bottom: 2em;
 }
 
@@ -95,22 +99,24 @@ code {
 }
 
 .btn_call_a {
-  background-color: var(--blue6);
-  color: var(--blue1);
+  border: none;
+}
+.btn_call_a:hover {
+  background-color: var(--naranja);
 }
 
 .titulo_carousel {
   padding: 1rem 0;
-  color: var(--blue8);
+  /* color: var(--blue8); */
   text-align: center;
-  background-color: var(--blue3);
+  /* background-color: var(--blue3); */
   width: auto;
   margin: auto auto 1em auto;
 }
 
 .carousel_custom {
   width: 75vw;
-  margin: auto;
+  margin:  2rem auto;
   /* padding: 0 11rem; */
 }
 
@@ -125,6 +131,7 @@ code {
   width: 5% !important;
 }
 
+
 .tarjeta {
   display: flex;
   flex-direction: column;
@@ -132,11 +139,12 @@ code {
   width: 33vw;
   margin: 10px 10px;
   border-radius: 25px;
+  overflow: hidden;
 }
 .tarjeta:hover {
-  filter: drop-shadow(0px 0px 30px #6581ce);
-  -webkit-filter: drop-shadow(0px 0px 30px #6581ce);
-  -moz-filter: drop-shadow(0px 0px 30px #6581ce);
+  box-shadow: -1px 1px 17px 4px rgba(255, 175, 52, 1);
+  -webkit-box-shadow: -1px 1px 17px 4px rgba(255, 175, 52, 1);
+  -moz-box-shadow: -1px 1px 17px 4px rgba(255, 175, 52, 1);
 }
 
 .tarjeta_imagen {
@@ -144,20 +152,22 @@ code {
   border-radius: 25px 25px 0 0;
   -webkit-border-radius: 25px 25px 0px 0px;
   -moz-border-radius: 25px 25px 0px 0px;
+  transition: all 0.5s;
+}
+.tarjeta_imagen:hover {
+  transform: scale(1.3) skew(-1deg) translate(-1px, 0px);
+  -webkit-transform: scale(1.3) skew(-1deg) translate(-1px, 0px);
+  -moz-transform: scale(1.3) skew(-1deg) translate(-1px, 0px);
 }
 .tarjeta_ciudad {
   font-size: 1.3rem;
-  color: var(--blue10);
   width: 100%;
   text-align: center;
-  background-color: var(--blue3);
   font-weight: bold;
 }
 .tarjeta_pais {
   width: 100%;
   text-align: center;
-  color: var(--blue10);
-  background-color: var(--blue3);
   border-radius: 0 0 25px 25px;
 }
 
@@ -166,8 +176,7 @@ code {
   justify-content: space-evenly;
   align-items: center;
   height: 20vh;
-  background-color: #0093e9;
-  background-image: linear-gradient(-90deg, #0093e9 0%, #80d0c7 100%);
+  border-top: 1px solid rgb(87, 86, 86);
 }
 
 .footer_links {
@@ -183,7 +192,6 @@ code {
   text-align: center;
 }
 .footer_links a {
-  background-color: #fff;
   border-radius: 5px;
   text-decoration: none;
   text-align: center;
@@ -199,20 +207,14 @@ code {
   font-size: 1.3rem;
   color: white;
 }
-.copyright{
+.copyright {
   background-color: rgb(255, 251, 251);
   margin: 0;
   padding: 0;
 }
-.copyright h3{
+.copyright h3 {
   font-size: 1rem;
-  color: var(--blue5);
-}
-
-@media (max-width: 1100px) {
-  .fondo-main {
-    background-size: initial;
-  }
+  /* color: var(--blue5); */
 }
 
 body::-webkit-scrollbar {
@@ -220,7 +222,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: var(--blue5);
+  /* background-color: var(--blue5); */
   border-radius: 5px;
 }
 
@@ -231,6 +233,9 @@ body::-webkit-scrollbar-thumb {
   .tarjeta {
     width: 80vw;
   }
+  .tarjeta:hover .tarjeta_ciudad {
+    display: none;
+  }
   .tarjeta_imagen {
     width: 100%;
   }
@@ -238,10 +243,21 @@ body::-webkit-scrollbar-thumb {
     font-size: 2rem;
   }
 }
-
-@media (min-width:1440px){
-  .parrafo{
+@media (min-width: 1440px) {
+  .parrafo {
     font-size: 2rem;
   }
+  .tarjeta:hover .tarjeta_ciudad {
+    display: none;
+  }
 }
-
+@media (max-width: 1100px) {
+  .fondo-main {
+    background-size: initial;
+  }
+}
+@media (max-width: 1400px) {
+  .tarjeta:hover .tarjeta_ciudad {
+    display: none;
+  }
+}
