--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,8 +43,8 @@ code {
   height: 95vh;
   display: flex;
   flex-direction: column;
-  background-image: url("./assets/img/fondo.png");
-  background-position: left;
+  background-image: url("./assets/img/fondo2.jpg");
+  /* background-position: left; */
   background-size: cover;
 }
 
@@ -55,9 +55,13 @@ code {
 .hero {
   display: flex;
   flex-direction: column;
+  flex: 2 1;
+  flex-wrap: nowrap;
+  align-content: flex-start;
   justify-content: center;
-  flex: 2;
 }
+
+
 
 .call_a {
   margin-bottom: 5rem;
@@ -100,6 +104,7 @@ code {
 
 .btn_call_a {
   border: none;
+  margin-top: 2rem;
 }
 .btn_call_a:hover {
   background-color: var(--naranja);
@@ -219,10 +224,11 @@ code {
 
 body::-webkit-scrollbar {
   width: 7px;
+  background-color: var(--negro);
 }
 
 body::-webkit-scrollbar-thumb {
-  /* background-color: var(--blue5); */
+  background-color: var(--naranja);
   border-radius: 5px;
 }
 
@@ -251,13 +257,74 @@ body::-webkit-scrollbar-thumb {
     display: none;
   }
 }
-@media (max-width: 1100px) {
-  .fondo-main {
-    background-size: initial;
-  }
-}
+
+
 @media (max-width: 1400px) {
   .tarjeta:hover .tarjeta_ciudad {
     display: none;
   }
+}
+
+/* Header Cities */
+
+.header-cities{
+  height: 40vh;
+  background-image: url("./assets/img/headerCities.jpg");
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5vh;
+}
+.header-cities-titulo{
+  font-size: 3rem;
+  color: var(--naranja);
+  background-color: #4141418a;
+  border-radius: 5px;
+}
+
+/* Card Cities */
+.container-cities{
+  width: 95vw;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-cities{
+  width: 80vw;
+  height: 30vh;
+  display: flex;
+  justify-content: space-between;
+  margin: 2rem 0;
+  background-color: var(--naranja);
+  border: 3px solid rgba(218, 218, 220, 0.481);
+  transition: all .5s;
+  
+}
+.card-cities-image{
+  width: 60%;
+  height: 100%;
+  border-radius: 15px;
+  
+}
+.card-cities-items{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 30%;
+}
+.card-cities-description{
+  display: none;
+  align-self: center;
+  margin-left: auto;
+  width: 40%;
+}
+.card-cities:hover .card-cities-description{
+  display: block;
+}
+.card-cities:hover .card-cities-items{
+  display: none;
 }
