--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --naranja: #ffaf34;
-  --negro: #414141;
+  --negro: #414141; 
   --gris: #9d9d9d;
 }
 .montserrat {
@@ -303,6 +303,7 @@ body::-webkit-scrollbar-thumb {
   background-color: #aeaeae3f;
   border-radius: 15px;
   padding: 1rem 1.5rem;
+  text-align: center;
 }
 
 /* Card Cities */
@@ -334,6 +335,7 @@ body::-webkit-scrollbar-thumb {
 .card-cities-texto {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -385,6 +387,7 @@ body::-webkit-scrollbar-thumb {
   margin-top: 5vh;
   box-shadow: 0px 0px 30px 0px rgba(10, 10, 10, 0.549);
 }
+
 .select-filtro{
   background: var(--naranja);
    border: 1px solid var(--naranja);
@@ -393,7 +396,8 @@ body::-webkit-scrollbar-thumb {
    font-size: 1rem;
    margin: 5px;
    outline: 0 !important;
-   width:15vw;
+   width:25vw;
+   max-width:150px;
 }
 
 .input-ciudades{
