--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -429,6 +429,9 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size:cover !important;
 }
 
 .header-city-titulo {
