--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -1,129 +1,238 @@
+$naranja: #ffaf34;
+$negro: #414141;
+$gris: #9d9d9d;
 
-$naranja : #ffaf34;
-$negro : #414141;
-$gris : #9d9d9d;
+.itinerary {
+  width: 90vw;
+  background-color: $naranja;
+  display: flex;
+  flex-direction: column;
+  margin: auto auto 5vh auto;
+  border-radius: 15px;
 
-.itinerary{
-    width: 90vw;
-    background-color: $naranja;
+  @media (min-width: 1110px) {
+    width: 70vw;
+  }
+
+  &_title {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  &_body {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    border: 1px solid $naranja;
+  }
+  &_activities {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    margin: auto auto 5vh auto ;
-    border-radius: 15px;
-    
-    @media (min-width:1110px) {
-        width: 70vw;
-    }
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    background-color: $negro;
+    border-left: 1px solid $naranja;
+    border-right: 1px solid $naranja;
 
-    &_title{
-        font-size:1.5rem;
-        text-align: center;
+    & > h2 {
+      text-align: center;
     }
-    &_body{
-        display: flex;
-        justify-content:space-evenly;
-        flex-wrap: wrap;
-        border: 1px solid $naranja;
-        
-    }
-    &_activities{
-        width:100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: auto;
-        background-color: $negro;
-        border-left: 1px solid $naranja;
-        border-right: 1px solid $naranja;
+  }
+  &_images {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
 
+    & > img {
+      border-radius: 15px;
+      padding: 10px 25px;
+    }
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
+  }
+  &_item_uno {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
 
-        & > h2{
-            text-align: center;
-        }
+    min-width: 33%;
+    @media (max-width: 768px) {
+      min-width: 100%;
     }
-    &_images {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: auto;
-    
-        & > img{
-            border-radius: 15px;
-        padding: 10px 25px;
-        }
-        @media(max-width : 768px) {
-            flex-direction: column;
-        }
-    }
-    &_item_uno{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        flex: 1;
-       
-        min-width: 33%;
-        @media(max-width : 768px) {
-            min-width: 100%;
-        }
+  }
+  &_item_dos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
 
-    }
-    &_item_dos{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        flex: 1;
-        
-        min-width: 33%;
-        
-        & > img{
-            width: 150px;
-            height: 150px;
-            border-radius: 15px;
-            object-fit: cover;
-            overflow: hidden;
-        }
-        @media(max-width : 768px) {
-            min-width: 100%;
-        }
-    }
-    &_item_tres{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        flex: 1;
-       
-        min-width: 33%;
-        @media(max-width : 768px) {
-            min-width: 100%;
-        }
+    min-width: 33%;
 
+    & > img {
+      width: 150px;
+      height: 150px;
+      border-radius: 15px;
+      object-fit: cover;
+      overflow: hidden;
     }
-    &_btn{
-        margin: 15px auto;
-        background-color: $negro;
-        color: $naranja;
-        font-size: 3vh;
-        border-radius: 5px ;
-        border: none;
-        transition:all .5s;
-        padding:0 5px;
+    @media (max-width: 768px) {
+      min-width: 100%;
+    }
+  }
+  &_item_tres {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
 
+    min-width: 33%;
+    @media (max-width: 768px) {
+      min-width: 100%;
     }
-    &_hastag{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-    }
+  }
+  &_btn {
+    margin: 15px auto;
+    background-color: $negro;
+    color: $naranja;
+    font-size: 3vh;
+    border-radius: 5px;
+    border: none;
+    transition: all 0.5s;
+    padding: 0 5px;
+  }
+  &_hastag {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-.under{
-    // width: auto;
-    max-height: 30vh;
+.under {
+  // width: auto;
+  max-height: 30vh;
+  margin-top: 2rem;
+}
+
+.contenedor_inputs {
+  width: 100%;
+  min-height: 70vh;
+  background-color: $negro;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding: 1rem 0;
+
+  &_card {
+    width: 90%;
+    height: 90%;
+    background-color: $naranja;
     margin-top: 2rem;
-}
+    padding: 2rem 0;
+    border-radius: 5px;
 
+    display: flex;
+    justify-content: space-evenly;
+    align-items: space-between;
+
+    @media (max-width: 666px) {
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+    }
+
+    &_izquierda {
+      width: 50%;
+      // background-color:#2d32c9;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+
+      &_btn {
+        width: 40%;
+        text-align: center;
+
+        h2 {
+          font-size: 1.1rem;
+        }
+        p {
+          font-size: 0.8rem;
+        }
+        button {
+          border: 1px solid $naranja;
+          border-radius: 5px;
+          background-color: $negro;
+          font-size: 0.8rem;
+          padding: 0.5rem;
+        }
+      }
+      > img {
+        width: 40%;
+      }
+
+      @media (max-width: 666px) {
+        width: 90%;
+        height: 45%;
+        flex-direction: row;
+      }
+    }
+    &_derecha {
+      width: 45%;
+      display: flex;
+      flex-direction: column;
+      align-items: space-between;
+      justify-content: center;
+      margin: 2rem 0;
+
+      input, select {
+        margin: 10px 5px;
+        background: $negro;
+        border: 1px solid $naranja;
+        border-radius: 5px 5px 5px 5px;
+        color: $naranja;
+        font-size: 1rem;
+        padding: 5px;
+        outline: 0 !important;
+        text-align: center;
+        width: 95%;
+        padding: 0.5rem;
+
+        option{
+            color: $naranja;
+        }
+        option::placeholder{
+            color: $naranja;
+        }
+        
+      }
+      input::placeholder, select::placeholder{
+        color: $naranja;
+        text-align: center;
+      }
+      button {
+        width:50%;
+        border: 1px solid $naranja;
+        border-radius: 5px;
+        background-color: $negro;
+        font-size: 0.8rem;
+        padding: 0.5rem;
+        margin: 10px 0;
+        color: $naranja;
+        align-self: center;
+        font-weight: bold;
+      }
+      @media (max-width: 666px) {
+        width: 90%;
+        height: 45%;
+      }
+    }
+  }
+}
