--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -3,9 +3,6 @@ $negro: #414141;
 $gris: #9d9d9d;
 
 
-
-
-
 .itinerary {
   width: 90vw;
   background-color: $naranja;
@@ -258,10 +255,17 @@ $gris: #9d9d9d;
   bottom: 0;
   left:0;
   right:0;
-  color:rgb(255, 0, 0);
+  color:rgb(0, 0, 0);
   font-size: 13px;
 
   @media (max-width: 660px) {
     font-size:12px;
   }
+}
+
+.color-rojo{
+  color: red;
+}
+.color-verde{
+  color: rgb(12, 194, 12);
 }
