--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -3,9 +3,11 @@ $negro: #414141;
 $gris: #9d9d9d;
 
 
+
 .itinerary {
   width: 90vw;
-  background-color: $naranja;
+  max-width: 800px;
+  background-color:rgba(255, 255, 255, 0.907);
   display: flex;
   flex-direction: column;
   margin: auto auto 5vh auto;
@@ -16,49 +18,78 @@ $gris: #9d9d9d;
   }
 
   &_title {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     text-align: center;
   }
   &_body {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    border: 1px solid $naranja;
+  }
+  &_comentario{
+    min-width: 50%;
   }
   &_comentarios{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content:center;
-    width: 70%;
+    width: 95%;
+    height: 350px;
     margin:auto;
-    background-color: $negro;
     border-radius: 5px;
     margin-top: 1rem;
     padding:15px;
+    border: 1px solid rgb(199, 199, 199);
+
+    img{
+      border-radius: 10px;
+      padding: 5px;
+    }
 
     &_comentario{
+      display: flex;
       width:90%;
-      background-color: $naranja;
+
+      background-color: white;
       margin: 5px;
       border-radius: 3px;
       color: $negro;
       font-weight: bold;
     }
+    &_iconos{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width:25%;
+      margin: auto;
+
+    }
   }
   &_activities {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     margin: auto;
-    background-color: $naranja;
-    border-left: 1px solid $naranja;
-    border-right: 1px solid $naranja;
-    
-    & > h2 {
-      text-align: center;
+
+    &_cards{
+      display: flex;
+      flex-direction: column;
+      justify-content:center;
+      align-items: center;
+      position:relative;
+      margin-top: 1.5rem;
+      h3 {
+        font-size:1.3rem;
+        position:absolute;
+        top: 0;
+      }
+      img{
+        max-width: 95%;
+      }
     }
   }
   &_images {
@@ -68,6 +99,7 @@ $gris: #9d9d9d;
     margin: auto;
 
     & > img {
+
       border-radius: 15px;
       padding: 10px 25px;
     }
@@ -81,7 +113,12 @@ $gris: #9d9d9d;
     align-items: center;
     justify-content: center;
     flex: 1;
-    background-color: $naranja;
+    background-color:rgba(255, 255, 255, 0.907);
+
+    img{
+      width: 95%;
+      border-radius: 15px;
+    }
 
     min-width: 33%;
     @media (max-width: 768px) {
@@ -94,14 +131,15 @@ $gris: #9d9d9d;
     align-items: center;
     justify-content: center;
     flex: 1;
+    background-color:rgba(255, 255, 255, 0.907);
 
 
     min-width: 33%;
 
     & > img {
-      width: 150px;
-      height: 150px;
-      border-radius: 15px;
+      width: 110px;
+      height: 110px;
+      border-radius: 50px;
       object-fit: cover;
       overflow: hidden;
     }
@@ -115,7 +153,7 @@ $gris: #9d9d9d;
     align-items: center;
     justify-content: center;
     flex: 1;
-    background-color: $naranja;
+    background-color:rgba(255, 255, 255, 0.907);
 
 
     min-width: 33%;
@@ -126,7 +164,7 @@ $gris: #9d9d9d;
   &_btn {
     margin: 15px auto;
     background-color: $negro;
-    color: $naranja;
+    color: white;
     font-size: 3vh;
     border-radius: 5px;
     border: none;
@@ -325,7 +363,6 @@ $gris: #9d9d9d;
   input,
   select {
     background-color: $negro;
-    border: 1px solid $naranja;
     border-radius: 5px 5px 5px 5px;
     color: $naranja;
     font-size: 1rem;
@@ -350,3 +387,50 @@ $gris: #9d9d9d;
       width: 40%;
     }
   }
+.agregarComentario{
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  background-color: white;
+  border-radius: 5px 5px 5px 5px;
+  font-size: 1rem;
+  text-align: center;
+  width: 70%;
+  margin: auto;
+  padding: 0.5rem;
+}
+
+.modal_borrar{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  p{
+    font-size:.9rem;
+    margin: 0;
+    padding: 0;
+  }
+
+  button{
+    border: none;
+    border-radius: 5px;
+    color: white;
+  }
+}
+
+.modal-actualizar{
+  display:flex;
+  align-items: center;
+
+  button{
+    width: 18%;
+    height: 50px;
+    border: none;
+    border-radius: 5px 5px 5px 5px;
+    color: white;
+    font-size:13px;
+    margin-left: 5px;
+  }
+}
