--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -41,6 +41,7 @@ $gris: #9d9d9d;
     margin-top: 1rem;
     padding:15px;
     border: 1px solid rgb(199, 199, 199);
+    overflow-y: scroll;
 
     img{
       border-radius: 10px;
