--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -26,37 +26,81 @@ $gris: #9d9d9d;
     justify-content: space-evenly;
     flex-wrap: wrap;
   }
-  &_comentario{
-    min-width: 50%;
-  }
   &_comentarios{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content:center;
     width: 95%;
     height: 350px;
-    margin:auto;
     border-radius: 5px;
+    margin: auto;
     margin-top: 1rem;
     padding:15px;
-    border: 1px solid rgb(199, 199, 199);
+    background-image: url('https://descubrecomohacerlo.com/wp-content/uploads/2020/12/fondo-predeterminado-whatsapp.jpg');
+    background-position: center center;
     overflow-y: scroll;
-
+    border-radius: 5px;
+    border: 1px solid rgba(38, 137, 198, 0.27);
     img{
-      border-radius: 10px;
+      border-radius: 20px;
       padding: 5px;
+      margin-right: 5px;
     }
-
     &_comentario{
       display: flex;
-      width:90%;
+      align-items: center;
+      width:99%;
 
+      margin: 10px 0;
       background-color: white;
-      margin: 5px;
       border-radius: 3px;
       color: $negro;
       font-weight: bold;
+      border: 1px solid lightblue;
+      border-radius: 10px;
+      span{
+        width:70%;
+        word-wrap: break-word;
+        font-size: 1rem;
+        font-weight: 400;
+        
+
+        @media (max-width: 600px) {
+          width: 65%;
+        }
+      }
+      button{
+        align-self: flex-end;
+        border: none;
+        background-color: rgba(255, 255, 255, 0);
+      }
+      input {
+        background-color: rgb(239, 239, 239);
+        border: 1px solid lightblue;
+        border-radius: 5px 5px 5px 5px;
+        color: rgb(15, 59, 74);
+        font-size: .7rem;
+        font-weight: bold;
+        outline: 0 !important;
+        text-align: center;
+        width:35vw;
+        padding: 0.3rem;
+        
+        @media (max-width: 490px) {
+          width:50vw;
+        }
+        @media (min-width: 1440px) {
+          width:30vw;
+        }
+        @media (max-width: 320px) {
+          width:100%;
+        }
+      }
+      input::placeholder{
+        color: lightblue;
+        text-align: center;
+      }
     }
     &_iconos{
       display: flex;
@@ -68,13 +112,27 @@ $gris: #9d9d9d;
 
     }
   }
+  &_comentarios::-webkit-scrollbar {
+    width: 7px;
+    background-color: rgb(219, 224, 227);
+  }
+  &_comentarios::-webkit-scrollbar-thumb {
+    background-color: rgba(95, 115, 133, 0.509);
+    border-radius: 5px;
+  }
+ 
   &_activities {
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     margin: auto;
+
+    @media (max-width: 700px) {
+      flex-direction: column;
+    }
+
 
     &_cards{
       display: flex;
@@ -84,12 +142,13 @@ $gris: #9d9d9d;
       position:relative;
       margin-top: 1.5rem;
       h3 {
-        font-size:1.3rem;
+        font-size:1rem;
         position:absolute;
         top: 0;
       }
       img{
         max-width: 95%;
+        border-radius:15px;
       }
     }
   }
@@ -133,8 +192,7 @@ $gris: #9d9d9d;
     justify-content: center;
     flex: 1;
     background-color:rgba(255, 255, 255, 0.907);
-
-
+    padding-top:15px;
     min-width: 33%;
 
     & > img {
@@ -164,9 +222,9 @@ $gris: #9d9d9d;
   }
   &_btn {
     margin: 15px auto;
-    background-color: $negro;
-    color: white;
-    font-size: 3vh;
+    background-color: rgba(17, 100, 128, 0.756);
+    color: rgb(255, 255, 255);
+    font-size: 2.5vh;
     border-radius: 5px;
     border: none;
     transition: all 0.5s;
@@ -398,9 +456,14 @@ $gris: #9d9d9d;
   border-radius: 5px 5px 5px 5px;
   font-size: 1rem;
   text-align: center;
-  width: 70%;
-  margin: auto;
+  width: 90%;
+  margin: auto auto 0 auto;
   padding: 0.5rem;
+
+}
+
+.MuiFormControl-root,.MuiTextField-root,.css-1u3bzj6-MuiFormControl-root-MuiTextField-root{
+  width: 80%;
 }
 
 .modal_borrar{
@@ -439,7 +502,6 @@ $gris: #9d9d9d;
 .contenedor-likes{
   margin: 7px;
   display:flex;
-  border : 1px solid green;
 
   &_like{
     color: #454cd8;
