--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -14,7 +14,7 @@ $gris: #9d9d9d;
   border-radius: 15px;
 
   @media (min-width: 1110px) {
-    width: 50vw;
+    width: 70vw;
   }
 
   &_title {
@@ -398,8 +398,14 @@ $gris: #9d9d9d;
   background-color: $negro;
 
   button{
+    border: none;
+    font-size: 1rem;
+    font-weight: 600;
     margin-top:1rem;
     background-color: $naranja;
+  }
+  button:hover{
+    
   }
 }
 
@@ -407,7 +413,7 @@ $gris: #9d9d9d;
   display:flex;
   justify-content:center;
   width: 100%;
-  height:71.5vh;
+  height:100vh;
   background-color:$negro;
   margin-top: 3.5rem;
   
