--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -142,7 +142,7 @@ $gris: #9d9d9d;
       position:relative;
       margin-top: 1.5rem;
       h3 {
-        font-size:1rem;
+        font-size:.9rem;
         position:absolute;
         top: 0;
       }
@@ -515,4 +515,22 @@ $gris: #9d9d9d;
   &_dislike{
     color: #a6a9e3;
   }
+}
+
+.hover{
+  transition:all 1s;
+}
+
+.hover:hover{
+  cursor:pointer;
+  transform: scale(1.2);
+}
+
+.logout{
+  font-size:1.2rem;
+  background-color: #68686882;
+  border: none;
+  color: $naranja;
+  border-radius: 5px;
+  font-weight: 600;
 }
